--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .game-board {
     width: 100%;
-    height: 500px;
+    height: 100vh;
     border-bottom: 10px solid #008000;
     margin: 0 auto;
     position: relative;
@@ -57,7 +57,22 @@ h1 {
     font-weight: bold;
     z-index: 1;
     font-family: 'Poppins', sans-serif;
-    color: #1D1E21;
+    color: #000000;
+}
+
+.btn-reiniciar {
+    position: absolute;
+    border: none;
+    background: #264450;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px 20px;
+    top: 50%;
+    right: 45%;
+
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 @keyframes pipe-animation {
